--- a/less/homepage.less
+++ b/less/homepage.less
@@ -69,12 +69,14 @@
   }
 
   img {
+    width: 33%;
     height: auto;
-    width: 100%;
     object-fit: cover;
     border-radius: 0 15px 15px 0;
 
     @media @mobile {
+      height: auto;
+      width: 100%;
       order: -1; 
       border-radius: 15px 15px 0 0; 
     }
